# resolution-prover

./: Cargo.toml  README.md  config.toml (template)  grammar.pest
benches/: holistic_benchmark.rs  proof_benches.rs
examples/: impossible_pathing.rs
sample-report/: note.txt
sample-report/first_order_0/base/: estimates.json  raw.csv
sample-report/first_order_0/new/: estimates.json  raw.csv
sample-report/first_order_1/base/: estimates.json
sample-report/first_order_1/new/: benchmark.json  tukey.json
sample-report/first_order_1/report/: index.html
sample-report/many_implications/base/: raw.csv  sample.json
sample-report/many_implications/new/: estimates.json  raw.csv
sample-report/many_implications/report/: index.html
sample-report/pathing_proof_0/base/: sample.json
sample-report/pathing_proof_0/new/: benchmark.json  estimates.json  sample.json
sample-report/pathing_proof_0/report/: index.html
sample-report/switching_thm/base/: estimates.json
sample-report/switching_thm/new/: raw.csv
src/: clause.rs  client.rs  error.rs  lib.rs  main.rs  prover.rs
src/ast/: expr.rs  literal.rs  mod.rs  parse.rs  symbols.rs  term.rs
src/prover/: clause.rs  clause_set.rs  feature_index.rs  mod.rs  search.rs  term_map.rs  term_tree.rs
tests/: proof_tests.rs
