[package]
name = "resolution-prover"
version = "0.1.0"
authors = ["arbaregni <jamesnsours@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "1.4.0"
fstrings = "0.2.3"
itertools = "0.9.0"
pest = "*"
pest_derive = "2.1.0"
map_in_place = "0.1.0"
