[package]
name = "resolution-prover"
version = "0.1.0"
authors = ["arbaregni <jamesnsours@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "1.4.0"
itertools = "0.9.0"
pest = "*"
pest_derive = "2.1.0"
map_in_place = "0.1.0"
toml = "*"
serde = { version = "*", features = ["derive"] }
log = "0.4"
pretty_env_logger = "0.3"
chrono = "*"
hashbrown = "0.8.1"

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "current"
features = [
  "builder",
  "cache",
  "framework",
  "model",
  "standard_framework",
  "rustls_backend",
  "utils",
]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "proof_benches"
harness = false